Try to stop zoom on double click on mobile. Make space bar wider and change buttons back to div. Hoping for preformance improvement on mobile

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -43,6 +43,10 @@ ul {
   padding: 0px;
   background-color: white;
   color: black;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .focus {
@@ -55,7 +59,7 @@ ul {
 }
 
 .space {
-  width: 200px;
+  width: 260px;
 }
 
 .text {
